# electron

./: .autofix.markdownlint-cli2.jsonc  .clang-format  .clang-tidy  .devcontainer.json  .dockerignore  .env.example  .eslintignore  .eslintrc  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lint-roller.json  .mailmap  .markdownlint-cli2.jsonc  .markdownlint.autofix.json  .markdownlint.json  .node-version  .oxfmtrc.json  .oxlintrc.json  .remarkrc  .travis.yml  .yarnrc.yml  AIMBOT DO F👹 1.js  API.md  ASAR_PDF_DOWNLOAD_IMPLEMENTATION.md  AUTHORS  Abinesh  AtOmXpLuS.app  BUILD.gn  Bella Art App Gift to Italy.  Block 3ros  CI  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT1.md  CONTRIBUTING-ko.md  CONTRIBUTING.md  Contributors.md  (+125 more)
brightray/: .gitignore  .gitmodules  .travis.yml  BUILD.gn  CPPLINT.cfg  LICENSE  LICENSE-CHROMIUM  README.md  appveyor.yml  brightray.gyp  brightray.gypi  filename_rules.gypi  filenames.gypi
brightray/browser/: brightray_paths.h  browser_client.cc  browser_client.h  browser_client_mac.mm  browser_context.cc  browser_context.h  browser_main_parts.cc  browser_main_parts.h  browser_main_parts_mac.mm  default_web_contents_delegate.cc  default_web_contents_delegate.h  default_web_contents_delegate_mac.mm  devtools_contents_resizing_strategy.cc  devtools_contents_resizing_strategy.h  devtools_delegate.cc  devtools_delegate.h  devtools_embedder_message_dispatcher.cc  devtools_embedder_message_dispatcher.h  devtools_file_system_indexer.cc  devtools_file_system_indexer.h  devtools_frontend.cc  devtools_frontend.h  devtools_manager_delegate.cc  devtools_manager_delegate.h  devtools_ui.cc  devtools_ui.h  download_manager_delegate.cc  download_manager_delegate.h  inspectable_web_contents.cc  inspectable_web_contents.h  inspectable_web_contents_delegate.cc  inspectable_web_contents_delegate.h  inspectable_web_contents_impl.cc  inspectable_web_contents_impl.h  inspectable_web_contents_view.h  inspectable_web_contents_view_delegate.cc  inspectable_web_contents_view_delegate.h  inspectable_web_contents_view_mac.h  inspectable_web_contents_view_mac.mm  io_thread.cc  (+31 more)
brightray/browser/linux/: inspectable_web_contents_view_linux.cc  inspectable_web_contents_view_linux.h  libnotify_loader.cc  libnotify_loader.h  libnotify_notification.cc  libnotify_notification.h  notification_presenter_linux.cc  notification_presenter_linux.h
brightray/browser/mac/: bry_application.h  bry_application.mm  bry_inspectable_web_contents_view.h  bry_inspectable_web_contents_view.mm  bry_inspectable_web_contents_view_private.h  cocoa_notification.h  cocoa_notification.mm  event_dispatching_window.h  event_dispatching_window.mm  notification_center_delegate.h  notification_center_delegate.mm  notification_delegate.h  notification_delegate.mm  notification_presenter_mac.h  notification_presenter_mac.mm
brightray/browser/media/: media_capture_devices_dispatcher.cc  media_capture_devices_dispatcher.h  media_device_id_salt.cc  media_device_id_salt.h  media_stream_devices_controller.cc  media_stream_devices_controller.h
brightray/browser/net/: chrome_mojo_proxy_resolver_factory.cc  chrome_mojo_proxy_resolver_factory.h  cookie_details.h  devtools_network_conditions.cc  devtools_network_conditions.h  require_ct_delegate.cc  (+16 more)
brightray/common/: application_info.cc  application_info.h  application_info_mac.mm  application_info_win.cc  application_name.h  application_name_mac.mm  content_client.cc  content_client.h  main_delegate.cc  main_delegate.h  main_delegate_mac.mm  platform_util.h  platform_util_linux.cc  switches.cc  switches.h  util.h  util_linux.cc
brightray/script/: bootstrap  build  cibuild  cpplint
brightray/tools/: brightray_source_root.py
buildflags/: BUILD.gn  buildflags.gni
chromium_src/: BUILD.gn  LICENSE.chromium  README.md  SkUserConfig.h
chromium_src/library_loaders/: libgio.h  libgio_loader.cc  libspeechd.h  libspeechd_loader.cc
chromium_src/pdf/: pdf.cc  pdf.h
components/pepper_flash/: BUILD.gn
manifests/: BUILD.gn  electron_content_browser_manifest_overlay.json  electron_content_packaged_services_manifest_overlay.json
native_mate/: BUILD.gn  README.md  arguments.cc  arguments.h  callback.h  callback.h.pump  compat.h  constructor.cc  constructor.h  constructor.h.pump  converter.cc  converter.h  dictionary.cc  dictionary.h  function_template.cc  function_template.h  function_template.h.pump  handle.h  locker.cc  locker.h  native_mate_files.gypi  object_template_builder.cc  object_template_builder.h  persistent_dictionary.cc  persistent_dictionary.h  scoped_persistent.h  template_util.h  try_catch.cc  try_catch.h  wrappable.cc  wrappable.h  wrappable_base.h
native_mate/mate/: arguments.cc  constructor.h  promise.h
native_mate/native_mate/: arguments.cc  arguments.h  compat.h  constructor.h  converter.cc  converter.h  dictionary.cc  dictionary.h  function_template.cc  function_template.h  handle.h  microtasks_scope.cc  microtasks_scope.h  object_template_builder.cc  object_template_builder.h  object_template_builder_deprecated.h  persistent_dictionary.cc  persistent_dictionary.h  promise.cc  promise.h  scoped_persistent.h  wrappable.cc  wrappable.h  wrappable_base.h
shell/common/: BUILD.gn  application_info.cc  application_info.h  application_info_linux.cc  application_info_mac.mm  application_info_win.cc  atom_command_line.cc  atom_command_line.h  atom_constants.cc  atom_constants.h  callback_util.h  color_util.cc  color_util.h  command_line_util_win.cc  command_line_util_win.h  crash_keys.cc  crash_keys.h  deprecate_util.cc  deprecate_util.h  electron_command_line.cc  electron_command_line.h  electron_constants.cc  electron_constants.h  electron_natives_codecache_main.cc  electron_paths.cc  electron_paths.h  error_util.cc  error_util.h  gc_plugin.h  gin_adapters.h  gin_util.h  heap_snapshot.cc  heap_snapshot.h  integrity_check_win.cc  integrity_check_win.h  js2c_bundle_ids.h  key_weak_map.h  keyboard_util.cc  keyboard_util.h  language_util.h  (+56 more)
spec-chromium/: BUILD.gn
spec-chromium/configs/: browsertests.yml  unittests.yml
(+11288 files in other folders)
